// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FieldWrapper should add clear button if showClearButton is true 1`] = `
<div>
  <div
    class="FieldWrapper"
  >
    <div
      class="FieldWrapper__content"
    >
      some children
    </div>
    <button
      class="Button Button--size_small Button--variant_ghost Button--context_secondary FieldWrapper__clearButton"
      title="Clear"
      type="button"
    >
      <svg
        aria-label="Clear"
        fill="currentColor"
        height="16"
        role="img"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`FieldWrapper should call onArrowClick when arrow is accessed by keyboard 1`] = `
<div>
  <div
    class="FieldWrapper"
  >
    <div
      class="FieldWrapper__content"
    >
      some children
    </div>
    <svg
      class="FieldWrapper__dropdownIcon"
      fill="currentColor"
      height="1em"
      role="button"
      stroke="currentColor"
      stroke-width="0"
      tabindex="0"
      viewBox="0 0 512 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M128 192l128 128 128-128z"
      />
    </svg>
  </div>
</div>
`;

exports[`FieldWrapper should call onArrowClick when arrow is clicked 1`] = `
<div>
  <div
    class="FieldWrapper"
  >
    <div
      class="FieldWrapper__content"
    >
      some children
    </div>
    <svg
      class="FieldWrapper__dropdownIcon"
      fill="currentColor"
      height="1em"
      role="button"
      stroke="currentColor"
      stroke-width="0"
      tabindex="0"
      viewBox="0 0 512 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M128 192l128 128 128-128z"
      />
    </svg>
  </div>
</div>
`;

exports[`FieldWrapper should call onClear callback correctly 1`] = `
<div>
  <div
    class="FieldWrapper"
  >
    <div
      class="FieldWrapper__content"
    >
      tag
    </div>
    <button
      class="Button Button--size_small Button--variant_ghost Button--context_secondary FieldWrapper__clearButton"
      title="Clear"
      type="button"
    >
      <svg
        aria-label="Clear"
        fill="currentColor"
        height="16"
        role="img"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`FieldWrapper should render arrow icon pointing down 1`] = `
<div>
  <div
    class="FieldWrapper"
  >
    <div
      class="FieldWrapper__content"
    >
      some children
    </div>
    <svg
      aria-label="open"
      class="FieldWrapper__dropdownIcon"
      fill="currentColor"
      height="1em"
      role="button"
      stroke="currentColor"
      stroke-width="0"
      tabindex="0"
      viewBox="0 0 512 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M128 192l128 128 128-128z"
      />
    </svg>
  </div>
</div>
`;

exports[`FieldWrapper should render arrow icon pointing up 1`] = `
<div>
  <div
    class="FieldWrapper"
  >
    <div
      class="FieldWrapper__content"
    >
      some children
    </div>
    <svg
      aria-label="close"
      class="FieldWrapper__dropdownIcon"
      fill="currentColor"
      height="1em"
      role="button"
      stroke="currentColor"
      stroke-width="0"
      tabindex="0"
      viewBox="0 0 512 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M128 320l128-128 128 128z"
      />
    </svg>
  </div>
</div>
`;

exports[`FieldWrapper should render correctly 1`] = `
<div>
  <div
    class="FieldWrapper"
  >
    <div
      class="FieldWrapper__content"
    >
      some children
    </div>
  </div>
</div>
`;
